# src/routes/userRoutes.ts
@@ -2,6 +2,7 @@ import express from "express";
 import {
   loginUser,
   registerUser,
+  sendEmailLink,
   userDetails,
 } from "../controllers/userController";
 import { authenticate } from "../Middleware/authenticateToken";
@@ -11,5 +12,6 @@ const router = express.Router();
 router.post("/register", registerUser);
 router.post("/login", loginUser);
 router.get("/login/userdetails",authenticate ,userDetails);
+router.post("/sendEmail",sendEmailLink)
 
 export default router;
